crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_end_of_line.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: eol_result
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 8,
  "handle": "type_int",
  "name": "int"
}
