crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_function.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: type_result
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "unknown",
  "name": "Unknown"
}
