crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_list_indexing.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: list_index_result
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "type_Dynamic(Todo(TodoType(/"list_literal_element_type/"",
  "name": "Dynamic(Todo(TodoType(/"list literal element type/""
}
