crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_optional_return.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: optional_return_result
---
{
  "aliasName": null,
  "category": 5,
  "categoryFlags": 0,
  "flags": 0,
  "handle": "type_Union",
  "name": "Union"
}
