crates/ty_server/tests/e2e/snapshots/e2e__tsp__get_type_string_literal.snap
---
source: crates/ty_server/tests/e2e/tsp.rs
expression: string_result
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 8,
  "handle": "type_str",
  "name": "str"
}
